--- a/body/ML/KG.tex
+++ b/body/ML/KG.tex
@@ -1,15 +1,15 @@
 \subsection{KG中的文本信息抽取}
-从纯文本数据中获取有价值的数据，组织成结构化的形式或半结构化的形式。主要包含这几个过程：实体识别、实体消歧、关系抽取及事件抽取。
-\paragraph{实体识别}从文本中识别出实体信息。
+从纯文本数据中获取有价值的数据, 组织成结构化的形式或半结构化的形式. 主要包含这几个过程: 实体识别、实体消歧、关系抽取及事件抽取. 
+\paragraph{实体识别}从文本中识别出实体信息. 
 
-\paragraph{实体消歧}消除指定实体的歧义。可以分为两类：
+\paragraph{实体消歧}消除指定实体的歧义. 可以分为两类: 
 \begin{itemize}
-	\item 实体链接：将给定文本中的实体指称项链接到已有知识图谱中的某个实体上
-	\item 实体聚类：假设已有知识图谱中并没有已经确定的实体，在一个给定一个语料库的基础上，通过聚类的方法消除语料中所有同一实体指称项的歧义，具有相同所指的实体指称项应被聚为一类
+	\item 实体链接: 将给定文本中的实体指称项链接到已有知识图谱中的某个实体上
+	\item 实体聚类: 假设已有知识图谱中并没有已经确定的实体, 在一个给定一个语料库的基础上, 通过聚类的方法消除语料中所有同一实体指称项的歧义, 具有相同所指的实体指称项应被聚为一类
 \end{itemize}
 
-\paragraph{关系抽取}获取两个实体之间的语义关系。
+\paragraph{关系抽取}获取两个实体之间的语义关系. 
 
 \paragraph{事件抽取}从描述事件信息的文本中抽取出用户感兴趣的事件信息并以结构化的
-形式呈现。
+形式呈现. 
 \tbc{red}{kg中的事件能否看作一个subgraph？}
