--- a/body/recsys/classic.tex
+++ b/body/recsys/classic.tex
@@ -1,78 +1,78 @@
 \subsection{基于人口统计学的推荐}
-特征相似的人喜欢的东西应该也类似。根据\textbf{用户画像}（以用户的基本信息作为相似度计算的基础），找出与目标用户相似的用户，将相似用户喜欢的物品推荐给目标用户。这种方法需要构建用户画像。
+特征相似的人喜欢的东西应该也类似. 根据\textbf{用户画像}（以用户的基本信息作为相似度计算的基础）, 找出与目标用户相似的用户, 将相似用户喜欢的物品推荐给目标用户. 这种方法需要构建用户画像. 
 \paragraph{优点}
 \begin{itemize}
-	\item 不涉及当前用户的历史喜好，所以解决了“\textbf{用户冷启动}”问题
-	\item 不依赖于物品本身的数据，故而无论这个物品是“书籍”、“音乐”还是“短视频”都可以使用，即它是领域独立的
+	\item 不涉及当前用户的历史喜好, 所以解决了“\textbf{用户冷启动}”问题
+	\item 不依赖于物品本身的数据, 故而无论这个物品是“书籍”、“音乐”还是“短视频”都可以使用, 即它是领域独立的
 \end{itemize}
 
 \paragraph{缺点}
 \begin{itemize}
 	\item 用户画像所需要的有些数据难以获取
-	\item 以人口统计信息计算相似用户不可靠。特别是“书籍”“音乐”这种涉及到个人喜好的商品，单用这种方法更是难以达到很好的效果
+	\item 以人口统计信息计算相似用户不可靠. 特别是“书籍”“音乐”这种涉及到个人喜好的商品, 单用这种方法更是难以达到很好的效果
 \end{itemize}
 
 \subsection{基于内容的推荐}
-把用户可能喜欢的物品类型进行推荐，即要找到相似的物品。需要构建物品的特征，如对物品进行标签化。
+把用户可能喜欢的物品类型进行推荐, 即要找到相似的物品. 需要构建物品的特征, 如对物品进行标签化. 
 \paragraph{优点}
 \begin{itemize}
 	\item 不存在稀疏性和“\textbf{项目冷启动}”问题
-	\item 简单有效，推荐结果具有可解释性，不需要领域知识
-	\item 基于物品本身特征推荐，不存在过度推荐热门的问题
-	\item \textbf{解决了基于人口统计学对个人兴趣建模的缺失}，能够很好的建模用户的喜好，实现更精确的推荐
+	\item 简单有效, 推荐结果具有可解释性, 不需要领域知识
+	\item 基于物品本身特征推荐, 不存在过度推荐热门的问题
+	\item \textbf{解决了基于人口统计学对个人兴趣建模的缺失}, 能够很好的建模用户的喜好, 实现更精确的推荐
 \end{itemize}
 
 \paragraph{缺点}
 \begin{itemize}
 	\item 推荐的结果\textbf{没有新颖性}
-	\item 由于需要基于用户的兴趣偏好进行推荐，故而存在“\textbf{用户冷启动}”问题
-	\item 该方法受推荐对象特征提取能力的限制。由于是根据物品相似度进行推荐，故而，物品特征构建模型的完善和全面决定了最后推荐的质量，然而像图像、音频等这种类型的特征难以提取
+	\item 由于需要基于用户的兴趣偏好进行推荐, 故而存在“\textbf{用户冷启动}”问题
+	\item 该方法受推荐对象特征提取能力的限制. 由于是根据物品相似度进行推荐, 故而, 物品特征构建模型的完善和全面决定了最后推荐的质量, 然而像图像、音频等这种类型的特征难以提取
 \end{itemize}
 
 \subsection{基于协同过滤的推荐}
-Collaborative Filtering，通过群体的行为来寻找相似性（用户或物品的相似性），通过该相似性来做推荐，现在通常用于做召回。协同过滤算法可以分为以下几类：
+Collaborative Filtering, 通过群体的行为来寻找相似性（用户或物品的相似性）, 通过该相似性来做推荐, 现在通常用于做召回. 协同过滤算法可以分为以下几类: 
 \paragraph{基于用户的协同过滤}
-User-based CF（UserCF），根据用户对物品的偏好，发现与当前用户口味和偏好相似的“邻居”用户群，并推荐近邻所偏好的物品，重点在于得到\textbf{用户之间的相似性}。与基于人口统计学的推荐的联系与区别：
+User-based CF（UserCF）, 根据用户对物品的偏好, 发现与当前用户口味和偏好相似的“邻居”用户群, 并推荐近邻所偏好的物品, 重点在于得到\textbf{用户之间的相似性}. 与基于人口统计学的推荐的联系与区别: 
 \begin{itemize}
 	\item 都是基于相似用户来推荐
-	\item 不同之处在于如何计算用户相似度：基于人口统计学只考虑用户本身的特征，而UserCF是在用户的历史偏好的数据上计算用户的相似度，它的基本假设是，喜欢类似物品的用户可能有相同或者相似的偏好
+	\item 不同之处在于如何计算用户相似度: 基于人口统计学只考虑用户本身的特征, 而UserCF是在用户的历史偏好的数据上计算用户的相似度, 它的基本假设是, 喜欢类似物品的用户可能有相同或者相似的偏好
 \end{itemize}
-特点：
+特点: 
 \begin{itemize}
 	\item 适用于用户数较小的场景
-	\item 适用于时效性较强（即物品变化频繁），用户个性化兴趣不太明显的领域，如新闻推荐
-	\item 在新用户对很少的物品产生行为后，不能立即对它进行个性化推荐，因为用户相似度表示每隔一段时间离线计算的，故而存在“用户冷启动”问题	
-	\item 新物品上线后一段时间，一旦有用户对物品产生行为，就可以将新物品推荐给和对它产生行为的用户兴趣相似的其他用户，故而解决了“项目冷启动”问题
-	\item 解释性较差，因为计算得到的相似用户可能并不是真的相似，并不能真的反映用户的兴趣。例如，用户都买了卫生纸、水杯等日常用品并不能表示用户之间相似，但如果都买了键盘、屏幕等，则能较可靠的推断用户是相似的，因此在计算用户相似度时要注意这种大家都会关注的“热门物品”，大家都选择热门物品并不能体现用户的真实兴趣（可以依据社交网络来防止相似用户并不相似）
+	\item 适用于时效性较强（即物品变化频繁）, 用户个性化兴趣不太明显的领域, 如新闻推荐
+	\item 在新用户对很少的物品产生行为后, 不能立即对它进行个性化推荐, 因为用户相似度表示每隔一段时间离线计算的, 故而存在“用户冷启动”问题	
+	\item 新物品上线后一段时间, 一旦有用户对物品产生行为, 就可以将新物品推荐给和对它产生行为的用户兴趣相似的其他用户, 故而解决了“项目冷启动”问题
+	\item 解释性较差, 因为计算得到的相似用户可能并不是真的相似, 并不能真的反映用户的兴趣. 例如, 用户都买了卫生纸、水杯等日常用品并不能表示用户之间相似, 但如果都买了键盘、屏幕等, 则能较可靠的推断用户是相似的, 因此在计算用户相似度时要注意这种大家都会关注的“热门物品”, 大家都选择热门物品并不能体现用户的真实兴趣（可以依据社交网络来防止相似用户并不相似）
 \end{itemize}
 
 \paragraph{基于物品的协同过滤}
-Item-based CF（ItemCF），基于用户对物品的偏好，发现物品和物品之间的相似度\textbf{物品之间的相似度}，然后根据用户的历史偏好信息，将类似的物品推荐给用户。与基于内容的推荐的联系与区别：
+Item-based CF（ItemCF）, 基于用户对物品的偏好, 发现物品和物品之间的相似度\textbf{物品之间的相似度}, 然后根据用户的历史偏好信息, 将类似的物品推荐给用户. 与基于内容的推荐的联系与区别: 
 \begin{itemize}
 	\item 都是基于相似物品进行推荐
-	\item 不同之处在于如何计算物品相似度：ItemCF是根据用户历史的偏好（如共现矩阵）推断，而基于内容的推荐是基于物品本身的属性特征
+	\item 不同之处在于如何计算物品相似度: ItemCF是根据用户历史的偏好（如共现矩阵）推断, 而基于内容的推荐是基于物品本身的属性特征
 \end{itemize}
-特点：
+特点: 
 \begin{itemize}
-	\item 适用于物品数明显小于用户数的场合，如果物品很多，计算物品的相似度矩阵的代价就会很大
-	\item 适合于长尾物品丰富，用户个性化需求强烈的领域，如电商网站
-	\item 用户有新行为，一定会导致推荐结果的实时变化
-	\item 新用户只要对一个物品产生行为，就可以给它推荐和该物品相关的其它物品，故而解决了“用户冷启动”问题
-	\item 不能在不离线更新物品相似度的情况下将新的物品推荐给用户，故而存在“项目冷启动”问题
-	\item 有较强的解释性，因为是依据用户历史偏好的物品来推荐
+	\item 适用于物品数明显小于用户数的场合, 如果物品很多, 计算物品的相似度矩阵的代价就会很大
+	\item 适合于长尾物品丰富, 用户个性化需求强烈的领域, 如电商网站
+	\item 用户有新行为, 一定会导致推荐结果的实时变化
+	\item 新用户只要对一个物品产生行为, 就可以给它推荐和该物品相关的其它物品, 故而解决了“用户冷启动”问题
+	\item 不能在不离线更新物品相似度的情况下将新的物品推荐给用户, 故而存在“项目冷启动”问题
+	\item 有较强的解释性, 因为是依据用户历史偏好的物品来推荐
 \end{itemize}
 
 
 \paragraph{基于模型的协同过滤}
-Model-based CF（ModelCF）。基本思想：用户具有一定的特征，决定着他的偏好选择；物品具有一定的特征，影响着用户需是否选择它；用户之所以选择某一个商品，是因为用户特征与物品特征相互匹配。ModelCF基于样本的用户偏好信息，训练一个推荐模型，然后根据实时的用户喜好的信息进行预测，计算推荐。
+Model-based CF（ModelCF）. 基本思想: 用户具有一定的特征, 决定着他的偏好选择；物品具有一定的特征, 影响着用户需是否选择它；用户之所以选择某一个商品, 是因为用户特征与物品特征相互匹配. ModelCF基于样本的用户偏好信息, 训练一个推荐模型, 然后根据实时的用户喜好的信息进行预测, 计算推荐. 
 
-参考：\href{https://www.cnblogs.com/shengyang17/p/11516532.html}{基于协同过滤的推荐算法}、\href{https://zhuanlan.zhihu.com/p/108759393}{推荐系统——经典算法（基于内容、协同过滤、混合等）}。
+参考: \href{https://www.cnblogs.com/shengyang17/p/11516532.html}{基于协同过滤的推荐算法}、\href{https://zhuanlan.zhihu.com/p/108759393}{推荐系统——经典算法（基于内容、协同过滤、混合等）}. 
 
 
 
 
 \subsection{FM}
-Factorization Machine，因子分解机。
+Factorization Machine, 因子分解机. 
 
 \subsection{FFM}
-Field-aware Factorization Machine，
+Field-aware Factorization Machine, 
