--- a/body/recsys/interest.tex
+++ b/body/recsys/interest.tex
@@ -135,5 +135,5 @@ $\text{SimHash}: e \longmapsto h$. 将物品表征映射成一个二元串 (\tex
 	
 	\item \href{https://mp.weixin.qq.com/s?__biz=MzI5NTU2ODQzMg==&mid=2247484150&idx=1&sn=3bdb017a542bc2e2b94404f46ec9eb4f&chksm=ec50d7a9db275ebfdc009e6be3ea6a0ee8209477dafc99bc8a6a212fa0456a14bf4453b826dd&scene=21#wechat_redirect}{刀工: 谈推荐系统特征工程中的几个高级技巧};
 	
-	\item \href{https://mp.weixin.qq.com/s/o04b8gN4TYecKHopXGMuVg}{日久见人心：论建模用户长期兴趣的几种姿势}
+	\item \href{https://mp.weixin.qq.com/s/o04b8gN4TYecKHopXGMuVg}{日久见人心: 论建模用户长期兴趣的几种姿势}
 \end{myitemize}
