--- a/main.tex
+++ b/main.tex
@@ -21,7 +21,7 @@
 % 将参考文献加进目录中
 \usepackage[nottoc]{tocbibind}
 \usepackage{bm} % 使用粗体的向量
-\usepackage{bbm} %使用黑板粗体的数字，如指示函数
+\usepackage{bbm} %使用黑板粗体的数字, 如指示函数
 \usepackage{subfigure}
 \usepackage[table]{xcolor}
 \usepackage{multirow}
@@ -38,7 +38,7 @@
 \usepackage[minted]{tcolorbox}
 \tcbuselibrary{skins, listings, xparse, breakable,listings}
 
-\usepackage{pgfplots}  % 一个可视化包，简化在文档中画图的过程。用户提供输入数据/公式，然后 pgfplots宏包会帮助用户绘制图像
+\usepackage{pgfplots}  % 一个可视化包, 简化在文档中画图的过程. 用户提供输入数据/公式, 然后 pgfplots宏包会帮助用户绘制图像
 
 \usepackage{pythonhighlight}
 \usepackage{cpphighlight}
@@ -90,7 +90,7 @@
 \definecolor{Green}{rgb}{0,0.75,0.0}
 \definecolor{LightGray}{rgb}{0.6,0.6,0.6}
 \definecolor{DarkGray}{rgb}{0.3,0.3,0.3}
-% 定义一些标记颜色，使用标记名来使用颜色
+% 定义一些标记颜色, 使用标记名来使用颜色
 \definecolor{InfoColor}{rgb}{0,1,0}
 \definecolor{ImportantColor}{rgb}{1,0,0}
 \definecolor{NormalColor}{rgb}{0,0,1}
@@ -121,7 +121,7 @@
 
 
 %% 插入一个学习主题
-%% 注意 input 和 include 的差别，input会将导入的内容紧接着之前的内容
+%% 注意 input 和 include 的差别, input会将导入的内容紧接着之前的内容
 %% include 会重起一页插入内容
 
 % \section{CS224W课程学习}
@@ -147,7 +147,7 @@
 
 \clearpage
 \part{Machine Learning}
-{\noindent}	 \rule[-10pt]{17.5cm}{0.5em}\\  %{\noindent}　表示取消缩进，\rule[水平高度]{长度}{粗细}
+{\noindent}	 \rule[-10pt]{17.5cm}{0.5em}\\  %{\noindent}　表示取消缩进, \rule[水平高度]{长度}{粗细}
 \section{Basics}
 \input{body/ML/basic}
 \section{经典算法}
@@ -285,7 +285,7 @@
 % \end{center}
 
 % 引用表格
-% 需要给表格加上标签，格式：\label{fig:fig1}
+% 需要给表格加上标签, 格式: \label{fig:fig1}
 % \ref{fig:fig1}
 
 % \subsection{Figures}
