--- a/body/algorithms/basic.tex
+++ b/body/algorithms/basic.tex
@@ -20,12 +20,12 @@
 	\end{tabular}
 \end{table}
 
-注意，基数排序中的 $d, r$ 分别表示位数和基数；\href{https://blog.csdn.net/alzzw/article/details/98245871}{计数排序}中 $k$ 是整数的范围。
+注意, 基数排序中的 $d, r$ 分别表示位数和基数；\href{https://blog.csdn.net/alzzw/article/details/98245871}{计数排序}中 $k$ 是整数的范围. 
 
 \subsection{大整数}
-\paragraph{Motivation}在C、C++等一些语言中，支持的整数类型所能保存的范围是有效的，相对Java、Python等一些语言中支持的范围是要小的。
+\paragraph{Motivation}在C、C++等一些语言中, 支持的整数类型所能保存的范围是有效的, 相对Java、Python等一些语言中支持的范围是要小的. 
 
-\paragraph{HOW?}考虑几个可能的涉及大整数的例子：大整数的加法、大整数的减法大整数乘某个数大整数除以某个数。主要涉及到的问题有：
+\paragraph{HOW?}考虑几个可能的涉及大整数的例子: 大整数的加法、大整数的减法大整数乘某个数大整数除以某个数. 主要涉及到的问题有: 
 \begin{itemize}
 	\item 大整数的存储
 	\item 大整数之间的加减法
@@ -37,16 +37,16 @@
 
 
 \subsection{并查集}
-\paragraph{Motivation}将n个不同的元素分成一组\textbf{不相交}的集合。能够快速地完成两种操作：查找某个元素属于那个集合、合并两个集合。注意：“不相交”可以有不同的定义，如graph中的节点是否相邻、在某种度量下的不相交等。
+\paragraph{Motivation}将n个不同的元素分成一组\textbf{不相交}的集合. 能够快速地完成两种操作: 查找某个元素属于那个集合、合并两个集合. 注意: “不相交”可以有不同的定义, 如graph中的节点是否相邻、在某种度量下的不相交等. 
 
 \paragraph{HOW?}
 
 \subsection{链表}
-链表应该算是使用非常广泛的一种数据结构了。先从最简单的链表说起：单链表。链表中的组成元素是一个个的节点，节点中包含了指向下一个节点的指针 \mintinline{python}{next} 以及所包含的数据。定义一下链表的节点：
+链表应该算是使用非常广泛的一种数据结构了. 先从最简单的链表说起: 单链表. 链表中的组成元素是一个个的节点, 节点中包含了指向下一个节点的指针 \mintinline{python}{next} 以及所包含的数据. 定义一下链表的节点: 
 \begin{python}
 	class ListNode:
 	     def __init__(self, val=0, next=None):
 	         self.val = val
 	         self.next = next
 \end{python}
-对于一个链表，是可以包含多个节点的，节点之间通过 \mintinline{python}{next} 指针相连，即可以从一个节点沿着 \mintinline{python}{next} 遍历到下一个节点。
+对于一个链表, 是可以包含多个节点的, 节点之间通过 \mintinline{python}{next} 指针相连, 即可以从一个节点沿着 \mintinline{python}{next} 遍历到下一个节点. 
