--- a/body/algorithms/search.tex
+++ b/body/algorithms/search.tex
@@ -1,20 +1,20 @@
 \subsection{贪心算法}
-贪心搜索是一种搜索解空间的策略，在搜索时，基于当前状态，选择代价最低或估计收益最大的方向作为下一步搜索的方向。使用贪心搜索并不能保证全局最优解，目的是为了找到一个可行解。在使用贪心算法前，先要证明以下两个东西：
+贪心搜索是一种搜索解空间的策略, 在搜索时, 基于当前状态, 选择代价最低或估计收益最大的方向作为下一步搜索的方向. 使用贪心搜索并不能保证全局最优解, 目的是为了找到一个可行解. 在使用贪心算法前, 先要证明以下两个东西: 
 \begin{itemize}
-	\item 贪心选择性：指所求问题的整体最优解可以通过一系列局部最优的选择（通过最优度量标准来判断）来到达
-	\item 最优子结构：一个问题的最优解中包含了子问题（比原问题规模更小的问题）的最优解，即每一步贪心选完后会留下子问题，子问题的最优解和贪心选出来的解可以凑成原问题的最优解
+	\item 贪心选择性: 指所求问题的整体最优解可以通过一系列局部最优的选择（通过最优度量标准来判断）来到达
+	\item 最优子结构: 一个问题的最优解中包含了子问题（比原问题规模更小的问题）的最优解, 即每一步贪心选完后会留下子问题, 子问题的最优解和贪心选出来的解可以凑成原问题的最优解
 \end{itemize}
-和动态规划相比，二者都需要描述清除问题的优化子结构；但是贪心算法重点是证明贪心选择的合理性，DP重点是找到子问题和合理的递推关系式。
+和动态规划相比, 二者都需要描述清除问题的优化子结构；但是贪心算法重点是证明贪心选择的合理性, DP重点是找到子问题和合理的递推关系式. 
 
-典型的贪心问题：Huffman编码、活动选择问题。
+典型的贪心问题: Huffman编码、活动选择问题. 
 
 
 
 \subsection{Beam Search}
-也叫集束搜索。
-对贪心搜索的一种改进。在进行搜索时，并不是只沿一个方向搜索，会同时保留$n$个最优的方向，分别以这$n$个方向进行扩展，扩展后在每个方向都可以得到$n$个备选项，那么则有$n^2$个备选项，在这$n^2$个被选项里选择最优的$n$个备选项作为下次扩展的方向，以此类推，即在搜索树的每一层都只保留$n$个方向。$n$就是beam width。
+也叫集束搜索. 
+对贪心搜索的一种改进. 在进行搜索时, 并不是只沿一个方向搜索, 会同时保留$n$个最优的方向, 分别以这$n$个方向进行扩展, 扩展后在每个方向都可以得到$n$个备选项, 那么则有$n^2$个备选项, 在这$n^2$个被选项里选择最优的$n$个备选项作为下次扩展的方向, 以此类推, 即在搜索树的每一层都只保留$n$个方向. $n$就是beam width. 
 
 \subsection{图}
-图的问题关键在于怎么把原始问题抽象成基于图的问题，这个图的问题通常可以通过对图的操作来完成。一个首先要考虑的问题就是如何从问题中国抽象出图。要构成一个图就包含了图中的节点和节点之间的边是什么。
+图的问题关键在于怎么把原始问题抽象成基于图的问题, 这个图的问题通常可以通过对图的操作来完成. 一个首先要考虑的问题就是如何从问题中国抽象出图. 要构成一个图就包含了图中的节点和节点之间的边是什么. 
 
 \subsection{二分}
